--- a/application/templates/auth/registration.html
+++ b/application/templates/auth/registration.html
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="submit" value="Rekisteröidy" />
+                <input type="submit" class="btn btn-primary" value="Rekisteröidy" />
             </td>
         </tr>
 </form>
