--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,7 +5,7 @@
   <p>
     <main role="main" class="container">
       <h1 class="mt-5">Tervetuloa!</h1>
-      <p class="lead">Tiekirkoissa on käynyt tänä kesänä jo {{ visitor_total }} vierailijaa ja kommentteja on jätetty {{ visit_total }}!</p>
+      <p class="lead">Tiekirkoissa on käynyt tänä kesänä jo {{ visitor_total }} vierailijaa ja sovellukseen on jätetty {{ visit_total }} kommenttia!</p>
     </main>
 
   </p>
